--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,9 +11,9 @@
   }
 }
 
-#nav a.active {
-  background-color: #2d2d30;
-  color: #0E9F6E;
+/* #nav a.active {
+  color: #115e59;
 }
-
-
+#nav a.hover {
+  color: #0f766e;
+} */
